samples/_failures_safe/1761205409_580bfa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e711a0b.c: In function ‘main’:
./samples/SAFE/__tmp_9e711a0b.c:143:5: error: expected declaration or statement at end of input
  143 |     }
      |     ^
